--- a/views/home/index.html
+++ b/views/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>rdwebdev23</title>
   </head>
   <body>
     <ul>
@@ -15,8 +15,8 @@
       <li>
         <span>JS projects</span>
         <ul>
-          <li><a href="/project5/js1">snake game</a></li>
-          <li><a href="/project5/js2">Notes keeping</a></li>
+          <li><a href="/project5/js1" target="_blank">snake game</a></li>
+          <li><a href="/project5/js2" target="_blank">Notes keeping</a></li>
         </ul>
       </li>
     </ul>
