new folder added

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -9,16 +9,9 @@
   <body>
     <ul>
       <li><a href="/project1" target="_blank">algo visualiser</a></li>
-      <li><a href="/project2" target="_blank">auto cursor move</a></li>
-      <li><a href="/project3" target="_blank">suduko solver</a></li>
-      <li><a href="/project4" target="_blank">intern project 1</a></li>
-      <li>
-        <span>JS projects</span>
-        <ul>
-          <li><a href="/project5/js1" target="_blank">snake game</a></li>
-          <li><a href="/project5/js2" target="_blank">Notes keeping</a></li>
-        </ul>
-      </li>
+      <li><a href="/project2" target="_blank">suduko solver</a></li>
+      <li><a href="/project3" target="_blank">2048</a></li>
+      <li><a href="/project4" target="_blank">Notes keeping</a></li>
     </ul>
   </body>
 </html>
