--- a/views/project3/index.css
+++ b/views/project3/index.css
@@ -3,104 +3,97 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+:root{
+    --bdm:34rem;
+}
 body{
-    background: linear-gradient(to top right , #130844 , #241468);
-    background-repeat: no-repeat;
-    font-family: 'Paytone One', sans-serif;
-    height: 100vh;
-    color: #fff;
+    background: #faf8ef;
+}
+.container{
+    height: 100%;
+    min-height: 100vh;
+    margin: auto;
     display: flex;
+    gap: 5rem;
     justify-content: center;
     align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.left{
+    display: flex;
     flex-direction: column;
     gap: 1rem;
 }
-h1{
-    text-shadow: 0 0 4px var(--pri-color);
+
+.left h1{
+    color: #776e65;
+    font-size: 5rem;
 }
 
-:root{
-    --box-width:50px;
-    --box-height:50px;
-    --box-border: 0.5px;
-    --pri-color: #10f028;
-}
-
-#board{
+.score-wrp{
     display: flex;
-    flex-wrap: wrap;
-    width: calc(9 * (var(--box-width) + 2 * var(--box-border)));
-    box-shadow: 0 0 4px var(--pri-color);
-    justify-content: space-between;
-    position: realtive;
+    gap: 1rem;
 }
 
-#number-div{
-    justify-content: space-between;
-    display: flex;
-    flex-wrap: wrap;
-    width: 78px;
-    height: 78px;
-    position: absolute;
-    transform: scale(0);
-    transition:all 0.2s ease;
-    z-index: 999;
-}
-#number-div .num{
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-    background: #111;
-    display: grid;
-    border: 0.5px solid var(--pri-color);
-    place-items: center;
-    transition: all 0.2s ease-out;
-    transform: scale(1);
-}
-#number-div .num:hover{
-    transform: scale(1.2);
-}
-
-#delete-num{
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    padding: 0.2rem;
-    transform: scale(1);
-    background: #000;
+.sc , .newgame{
+    padding: 0.8rem 2rem;
+    border-radius: 5px;
     color: #fff;
-    border: 1px solid var(--pri-color);
-    transition: all 0.2s ease-out;
+    font-weight: bold;
+    font-size: 1.1rem;
+    background: #bbada0;
 }
-#delete-num:hover{
-    transform: scale(1.2);
+
+.newgame{
+    border: none;
+    background: #8f7a66;
+    cursor: pointer;
+}
+
+.board{
+    width: var(--bdm);
+    height: var(--bdm);
+    background: #bbada0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 1rem ;
+    border-radius: 5px;
 }
 
 .box{
-    width: var(--box-width);
-    height: var(--box-height);
-    border: var(--box-border) solid var(--pri-color);
-    background: #2a1975;
-    cursor: pointer;
-    color: #fff;
-    font-size: 2rem;
+    border-radius: 5px;
+    width: 7rem;
+    height: 7rem;
+    background: #cdc1b4;
+    position: relative;
+    font-size: 4rem;
+    font-weight: bolder;
     display: grid;
     place-items: center;
-    transition: all 0.3s linear;
+    color: #776e65;
+    transition: all 0.2s linear;
+}
+.newbox{
+    font-size: 4rem;
+    font-weight: bolder;
+    display: grid;
+    place-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    transition: all 0.3s ease;
+    background: #eee4da;
+    color: #776e65;
 }
 
-.btn{
-    padding: 0.5rem 1.5rem;
-    font-size: 1.05rem;
-    border-radius: 3px;
-    border: none;
-    background: var(--pri-color);
-    color: #fff;
-    transition: all 0.3s linear;
-}
-
-.btn:hover{
-    box-shadow: 0 0 4px var(--pri-color);
-    cursor: pointer;
+@media screen and (max-width:786px) {
+    body{
+        padding: 2rem 0;
+    }
+    .container{
+        flex-direction: column;
+    }
 }
