--- a/views/project2/index.css
+++ b/views/project2/index.css
@@ -1,56 +1,106 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-body {
-  overflow: hidden;
-  cursor: none;
+body{
+    background: linear-gradient(to top right , #130844 , #241468);
+    background-repeat: no-repeat;
+    font-family: 'Paytone One', sans-serif;
+    height: 100vh;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
 }
-.cont{
-  height: 90vh;
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fill, 70px);
-  grid-gap: 5px; 
-}
-.heading{
-  height: 9vh;
-  text-align: center;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.cursor {
-  height: 1rem;
-  width: 1rem;
-  background-image: url("./cursor.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: none;
-  
+h1{
+    text-shadow: 0 0 4px var(--pri-color);
 }
 
-.box {
-  width: 70px;
-  height: 70px;
-  transition: all 0.2s ease;
-  display: grid;
-  place-items: center;
-  transform: scale(0);
-  /* border: 1px solid #6c6c6c; */
+:root{
+    --box-width:50px;
+    --box-height:50px;
+    --box-border: 0.5px;
+    --pri-color: #10f028;
 }
 
-.show{
-  transform: scale(1);
-  border: 1px solid #6c6c6c;
-  box-shadow:  0 2px;
+#board{
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(9 * (var(--box-width) + 2 * var(--box-border)));
+    box-shadow: 0 0 4px var(--pri-color);
+    justify-content: space-between;
+    position: realtive;
 }
 
-.click{
-  transform: translateY(2px);
-  box-shadow: 0 0;
+#number-div{
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    width: 78px;
+    height: 78px;
+    position: absolute;
+    transform: scale(0);
+    transition:all 0.2s ease;
+    z-index: 999;
+}
+#number-div .num{
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    background: #111;
+    display: grid;
+    border: 0.5px solid var(--pri-color);
+    place-items: center;
+    transition: all 0.2s ease-out;
+    transform: scale(1);
+}
+#number-div .num:hover{
+    transform: scale(1.2);
 }
 
+#delete-num{
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    padding: 0.2rem;
+    transform: scale(1);
+    background: #000;
+    color: #fff;
+    border: 1px solid var(--pri-color);
+    transition: all 0.2s ease-out;
+}
+#delete-num:hover{
+    transform: scale(1.2);
+}
+
+.box{
+    width: var(--box-width);
+    height: var(--box-height);
+    border: var(--box-border) solid var(--pri-color);
+    background: #2a1975;
+    cursor: pointer;
+    color: #fff;
+    font-size: 2rem;
+    display: grid;
+    place-items: center;
+    transition: all 0.3s linear;
+}
+
+.btn{
+    padding: 0.5rem 1.5rem;
+    font-size: 1.05rem;
+    border-radius: 3px;
+    border: none;
+    background: var(--pri-color);
+    color: #fff;
+    transition: all 0.3s linear;
+}
+
+.btn:hover{
+    box-shadow: 0 0 4px var(--pri-color);
+    cursor: pointer;
+}
