--- a/views/project3/index.html
+++ b/views/project3/index.html
@@ -4,31 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sudoko solver</title>
+    <title>2048</title>
     <link rel="stylesheet" href="./index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Paytone+One&family=Poppins:wght@300;400&family=Rosarivo&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>SUDUKO SOLVER</h1>
-    <div id="board">
-        <div id="number-div">
-            <div class="num">1</div>
-            <div class="num">2</div>
-            <div class="num">3</div>
-            <div class="num">4</div>
-            <div class="num">5</div>
-            <div class="num">6</div>
-            <div class="num">7</div>
-            <div class="num">8</div>
-            <div class="num">9</div>
-            <button id="delete-num">delete</button>
+    <div class="container">
+       <div class="left">
+        <h1>2048</h1>
+        <div class="score-wrp">
+            <div class="sc score">Score : 0</div>
+            <div class="sc best-score">Best : 0</div>
         </div>
-    </div>
-    <div>
-        <button class=" btn solve-btn">solve board</button>
-        <button class=" btn clear-btn">clear board</button>
+        <button class="btn newgame">new game</button>
+       </div>
+       <div class="right board">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+       </div>
     </div>
     <script src="./index.js"></script>
 </body>
