--- a/views/project4/index.html
+++ b/views/project4/index.html
@@ -1,225 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>intern 1</title>
-     <!-- CSS only -->
-     <!-- JavaScript Bundle with Popper -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-     <link rel="stylesheet" href="./css/landing/landing.css">
-     <link rel="stylesheet" href="./css/card1/card1.css">
-     <link rel="stylesheet" href="./css//card2/card2.css">
-     <link rel="stylesheet" href="./css/sponsers/sponsers.css">
-     <link rel="stylesheet" href="./css/Footer/footer.css">
-     <link rel="stylesheet" href="./css/card3/card3.css">
-     <link rel="stylesheet" href="./css/navbar/nav.css">
-     <link rel="stylesheet" href="./css/global/global.css">
-     <link rel="stylesheet" href="./css/slider/slider.css">
+     <title>jaadu notes</title>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+
 <body>
-     <!-- navabr -->
-     <nav class="navbar navbar-expand-lg bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
-                </li>
-              </ul>
-            </div>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">JAADU Notes</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+               </ul>
+               <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchtxt">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+               </form>
           </div>
      </nav>
-     <!-- navabr -->
 
-     <!-- landing -->
-     <div class="landingWrapper">
-          <div class="landingInfo">
-               <h1 class="landingHead">Lorem ipsum dolor sit amet consectetur.</h1>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore a esse officiis magni optio debitis! Voluptatem, tempora ad optio sed nostrum totam! Id saepe tempora facere quisquam provident repellendus porro?</p>
-               <button class="btn">check pricing</button>
-          </div>
-          <div class="temp"></div>
-     </div>
-     <!-- landing -->
+     <!-- NAVBAR ENDS  -->
 
-     <svg style="transform: rotate(180deg)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f8fafc" fill-opacity="1" d="M0,224L80,229.3C160,235,320,245,480,224C640,203,800,149,960,149.3C1120,149,1280,203,1360,229.3L1440,256L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
-     <!-- card 1  -->
-     <section class="card1Wrapper">
-          <h1>Lorem ipsum dolor sit.</h1>
-          <div class="cardbox">
-               <div class="cardbody">
-                    <h4>Lorem, ipsum dolor.</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, voluptates distinctio! Consectetur accusantium magnam consequuntur ullam quasi, quidem accusamus sint est molestias nisi veniam et. Necessit Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odit voluptatem omnis facilis, tenetur sit nisi error? Blanditiis, fugiat. Libero. atibus voluptatibus voluptatum dignissimos asperiores!</p>
-               </div>
-               <div class="cardbody">
-                    <h4>Lorem, ipsum dolor.</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, voluptates distinctio! Consectetur accusantium magnam consequuntur ullam quasi, quidem accusamus sint est molestias nisi veniam et. Necessit Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odit voluptatem omnis facilis, tenetur sit nisi error? Blanditiis, fugiat. Libero. atibus voluptatibus voluptatum dignissimos asperiores!</p>
-               </div>
-               <div class="cardbody">
-                    <h4>Lorem, ipsum dolor.</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, voluptates distinctio! Consectetur accusantium magnam consequuntur ullam quasi, quidem accusamus sint est molestias nisi veniam et. Necessit Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odit voluptatem omnis facilis, tenetur sit nisi error? Blanditiis, fugiat. Libero. atibus voluptatibus voluptatum dignissimos asperiores!</p>
+     <div class="container my-3 ">
+          <h1>welcome to jaadu notes</h1>
+          <div class="card">
+               <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+               <div class="card-body">
+                    <h5 class="card-title">Add Notes</h5>
+                    <div class="form-group">
+                         <textarea class="form-control" id="addText" rows="3"></textarea>
+                    </div>
+                    <button class="btn btn-primary" id="addbtn">Add</button>
                </div>
           </div>
-     </section>
-     <!-- card 1  -->
-     <svg style="transform: rotate(180deg);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f8fafc" fill-opacity="1" d="M0,224L80,229.3C160,235,320,245,480,224C640,203,800,149,960,149.3C1120,149,1280,203,1360,229.3L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-     <!-- card 2 -->
-     <section class="card2Wrapper">
-          <h1>Lorem, ipsum dolor.</h1>
-          <div class="card2box">
-               <div class="card2body">
-                    <img class="card2img" src="./assets/card2img/img1.png" alt="">
-                    <h4>Lorem ipsum dolor sit.</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quibusdam corrupti delectus dolore perspiciatis ut itaque repudiandae, doloribus, asperiores, earum molestiae eaque vero nostrum non quae minima vel iusto beatae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, vitae. </p>
-               </div>
-               <div class="card2body">
-                    <img class="card2img" src="./assets/card2img/img2.png" alt="">
-                    <h4>Lorem ipsum dolor sit.</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quibusdam corrupti delectus dolore perspiciatis ut itaque repudiandae, doloribus, asperiores, earum molestiae eaque vero nostrum non quae minima vel iusto beatae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, vitae. </p>
-               </div>
-               <div class="card2body">
-                    <img class="card2img" src="./assets/card2img/img3.png" alt="">
-                    <h4>Lorem ipsum dolor sit.</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quibusdam corrupti delectus dolore perspiciatis ut itaque repudiandae, doloribus, asperiores, earum molestiae eaque vero nostrum non quae minima vel iusto beatae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, vitae. </p>
-               </div>
-          </div>
-     </section>
-     <!-- card 2 -->
+          <h1>Your Notes</h1><hr>
+          <div id="notes" class="row container-fluid"></div>
+     </div>
 
-     <!-- sponsers -->
-     <div class="sponsersWrapper">
-          <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-          <div class="sponser_box">
-               <div class="sponserdiv">
-                    <img class="sponserimg1" src="./assets/sponserimg/sponserimg1.png" alt="">
-               </div>
-               <div class="sponserdiv">
-                    <img  class="sponserimg2" src="./assets/sponserimg/sponserimg2.png" alt="">
-               </div>
-               <div class="sponserdiv">
-                    <img class="sponserimg3" src="./assets/sponserimg/sponserimg3.png" alt="">
-               </div>
-          </div>
-     </div>
-     <!-- sponsers -->
 
-     <!-- CARD3 -->
-     <div class="card3aWrapper">
-          <h1>Lorem ipsum dolor sit amet.</h1>
-          <div class="card3box">
-               <div class="card3body body1">
-                    <div class="title">
-                         <img class="card3img" src="./assets/card3img/card3img4.png" alt="">
-                         <h3>Lorem, ipsum dolor.</h3>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laborum sint officia itaque temporibus minus sed autem, libero magni repellat?</p>
-                    <button class="btn">check pricing</button>
-               </div>
-               <div class="card3body body2">
-                    <div class="title">
-                         <img class="card3img" src="./assets/card3img/card3img1.png" alt="">
-                         <h3>Lorem, ipsum dolor.</h3>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laborum sint officia itaque temporibus minus sed autem, libero magni repellat?</p>
-                    <button class="btn">check pricing</button>
-               </div>
-               <div class="card3body body3">
-                    <div class="title">
-                         <img class="card3img" src="./assets/card3img/card3img2.png" alt="">
-                         <h3>Lorem, ipsum dolor.</h3>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laborum sint officia itaque temporibus minus sed autem, libero magni repellat?</p>
-                    <button class="btn">check pricing</button>
-               </div>
-               <div class="card3body body4">
-                    <div class="title">
-                         <img class="card3img" src="./assets/card3img/card3img3.png" alt="">
-                         <h3>Lorem, ipsum dolor.</h3>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laborum sint officia itaque temporibus minus sed autem, libero magni repellat?</p>
-                    <button class="btn">check pricing</button>
-               </div>
-          </div>
-     </div>
-     <!-- CARD3 -->
-     <!--  -->
-     <!-- slider -->
-     <div class="sliderWrapper">
-          <h1>Lorem, ipsum dolor.</h1>
-          <div class="slider-cont">
-               <div class="slides_box">
-                    <div class="sliderinfo">
-                         <img src="./assets/sliderimg/sliderimg1.png" alt="img">
-                         <h2>Lorem, dolor ipsum.</h2>
-                    </div>
-                    <div class="arrowleft">
-                         <span class="arrow"></span>
-                    </div>
-                    <div class="slides_cont">
-                         <div class="sliderbody">
-                              <div class="slideinfo">
-                                   <div class="info_cont">
-                                        <img src="./assets/sliderimg/sliderimg2.png" alt="">
-                                        <div class="info">
-                                             <span>john deo</span>
-                                             <p>CEO</p>
-                                        </div>
-                                   </div>
-                                   <div class="stars">⭐⭐⭐⭐</div>
-                              </div>
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, tempore. Amet nemo necessitatibus error qui quis? Ipsum culpa vero quasi soluta amet expedita, nulla, harum consequatur sit esse quas sint?</p>
-                         </div>
-                         <div class="sliderbody">
-                              <div class="slideinfo">
-                                   <div class="info_cont">
-                                        <img src="./assets/sliderimg/sliderimg4.png" alt="">
-                                        <div class="info">
-                                             <h5>Sam copper</h5>
-                                             <p>customer service manager</p>
-                                        </div>
-                                   </div>
-                                   <div class="stars">⭐⭐⭐⭐</div>
-                              </div>
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, tempore. Amet nemo necessitatibus error qui quis? Ipsum culpa vero quasi soluta amet expedita, nulla, harum consequatur sit esse quas sint?</p>
-                         </div>
-                         <div class="sliderbody">
-                              <div class="slideinfo">
-                                   <div class="info_cont">
-                                        <img src="./assets/sliderimg/sliderimg3.png" alt="">
-                                        <div class="info">
-                                             <h5>Amanda green</h5>
-                                             <p>Operation manager</p>
-                                        </div>
-                                   </div>
-                                   <div class="stars">⭐⭐⭐⭐</div>
-                              </div>
-                              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, tempore. Amet nemo necessitatibus error qui quis? Ipsum culpa vero quasi soluta amet expedita, nulla, harum consequatur sit esse quas sint?</p>
-                         </div>
-                    </div>
-               </div>
-          </div>
-     </div>
-     <!-- slider -->
 
-     <!-- footer -->
-     <div class="footer">
-          <p>@ helplama 2021</p>
-     </div>
+
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+          crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+          integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+          crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+          integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+          crossorigin="anonymous"></script>
+     <script src="app.js"></script>
 </body>
+
 </html>
