--- a/views/home/index.html
+++ b/views/home/index.html
@@ -5,13 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rdwebdev23</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/9975b12230.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <ul>
-      <li><a href="/project1" target="_blank">algo visualiser</a></li>
-      <li><a href="/project2" target="_blank">suduko solver</a></li>
-      <li><a href="/project3" target="_blank">2048</a></li>
-      <li><a href="/project4" target="_blank">Notes keeping</a></li>
-    </ul>
+    <div class="container">
+      <h1>Projects</h1>
+      <div class="card-wrap"></div>
+    </div>
+    <footer class="contact">
+      <h1>Contact me</h1>
+      <div class="social-div">
+        <a href="https://www.instagram.com/rohit_9289_/"><span>instagram</span><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><span>rohitdhakad101@gmail.com</span><i class="fa-regular fa-envelope"></i></a>
+        <a href="https://twitter.com/Rohitdh58773632"><span>twitter</span><i class="fa-brands fa-twitter"></i></a>
+      </div>
+      <p><a href="https://rdwebdev24.vercel.app/">www.rdwebdev24.com</a></p>
+    </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
+
+<!-- <li><a href="/project1" target="_blank">algo visualiser</a></li>
+<li><a href="/project2" target="_blank">suduko solver</a></li>
+<li><a href="/project3" target="_blank">2048</a></li>
+<li><a href="/project4" target="_blank">Notes keeping</a></li> -->
