--- a/views/home/index.html
+++ b/views/home/index.html
@@ -14,7 +14,9 @@
   <body>
     <div class="container">
       <h1>Projects</h1>
-      <div class="card-wrap"></div>
+      <div class="card-wrap">
+       
+      </div>
     </div>
     <footer class="contact">
       <h1>Contact me</h1>
@@ -25,6 +27,7 @@
       </div>
       <p><a href="https://rdwebdev24.vercel.app/">www.rdwebdev24.com</a></p>
     </footer>
+      
     <script src="./index.js"></script>
   </body>
 </html>
