--- a/views/home/style.css
+++ b/views/home/style.css
@@ -1,94 +1,150 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Roboto&family=Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Roboto&family=Ubuntu&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    transition: all 0.3s linear;
-    background: #f2f2f2;
-    font-family: 'Ubuntu', sans-serif;
+body {
+  transition: all 0.3s linear;
+  background: #f2f2f2;
+  font-family: "Ubuntu", sans-serif;
 }
-.container{
-    padding: 2rem 0;
-    min-height: 100vh;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 2rem;
+.container {
+  padding: 2rem 0;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-h1{
-    color: #f2795a;
+h1 {
+  color: #f2795a;
 }
-.card-wrap{
-    max-width: 70vw;
+.card-wrap {
+  max-width: 70vw;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  gap: 1rem;
+}
+
+.card {
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-left: 5px solid #f2795a;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.icon-div {
+  display: flex;
+  gap: 1rem;
+}
+.icon-div a {
+  color: #f2795a;
+  padding: 0.5rem;
+  border-radius: 50%;
+  transition: all 0.2s linear;
+}
+.icon-div a:hover {
+  color: #ffff;
+  background: #f2795a;
+}
+
+.contact {
+  border-top: 2px solid #f2795a;
+  width: 100%;
+  padding: 1.5rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-direction: column;
+  color: #f2795a;
+}
+.contact p a {
+  color: #f2795a;
+}
+
+.social-div {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.social-div a {
+  color: #f2795a;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.o-media__figure{
+    max-width: 15rem;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    grid-auto-rows: auto;
-    gap: 1rem; 
 }
 
-.card{
-    gap: 1rem;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    border-left: 5px solid #f2795a;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+.skeleton-box {
+  display: inline-block;
+  height: 1em;
+  position: relative;
+  overflow: hidden;
+  background-color: #dddbdd;
+  width: 100%;
+  height: 7rem;
+}
+.skeleton-box::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0,
+    rgba(255, 255, 255, 0.2) 20%,
+    rgba(255, 255, 255, 0.5) 60%,
+    rgba(255, 255, 255, 0)
+  );
+  -webkit-animation: shimmer 5s infinite;
+  animation: shimmer 5s infinite;
+  content: "";
+}
+@-webkit-keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
 }
 
-.icon-div{
-    display: flex;
-    gap: 1rem;
-}
-.icon-div a{
-   color: #f2795a;
-   padding: 0.5rem;
-   border-radius: 50%;
-   transition: all 0.2s linear;
-}
-.icon-div a:hover{
-    color: #ffff;
-    background: #f2795a;
+
+.o-media {
+  display: flex;
 }
 
-.contact{
-    border-top: 2px solid #f2795a;
-    width: 100%;
-    padding: 1.5rem 0;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    flex-direction: column;
-    color: #f2795a;
+.o-vertical-spacing > * + * {
+  margin-top: 0.75em;
 }
-.contact p a{
-    color: #f2795a;
+.o-vertical-spacing--l > * + * {
+  margin-top: 2em;
 }
 
-.social-div{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-.social-div a{
-    color: #f2795a;
-    display: flex;
-    gap: 0.5rem;
-}
 
-@media screen and (max-width:786px) {
-    .card-wrap{
-        max-width: 100vw;
-        padding:0 1rem;
-    }
+@media screen and (max-width: 786px) {
+  .card-wrap {
+    max-width: 100vw;
+    padding: 0 1rem;
+  }
 }
-@media screen and (max-width:425px) {
-    .card-wrap{
-        grid-template-columns: 1fr; 
-    }
+@media screen and (max-width: 425px) {
+  .card-wrap {
+    grid-template-columns: 1fr;
+  }
 }
