--- a/views/home/style.css
+++ b/views/home/style.css
@@ -59,7 +59,7 @@ h1 {
 .contact {
   border-top: 2px solid #f2795a;
   width: 100%;
-  padding: 1.5rem 0;
+  padding: 1.5rem 1rem;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -74,6 +74,8 @@ h1 {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 .social-div a {
   color: #f2795a;
@@ -139,6 +141,7 @@ h1 {
 
 @media screen and (max-width: 786px) {
   .card-wrap {
+    grid-template-columns: repeat(2, 1fr);
     max-width: 100vw;
     padding: 0 1rem;
   }
